--- a/app/src/main/res-screen/main/layout/fragment_payment.xml
+++ b/app/src/main/res-screen/main/layout/fragment_payment.xml
@@ -327,7 +327,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="8dp"
-        android:text="@string/payment_delete"
+        android:text="@string/templates_delete"
         android:textColor="@color/colorAccent"
         />
   </LinearLayout>
