--- a/app/src/main/res-screen/main/layout/item_template.xml
+++ b/app/src/main/res-screen/main/layout/item_template.xml
@@ -3,26 +3,246 @@
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
+    android:id="@+id/clParent"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:background="@color/colorLLightGray"
     android:foreground="?attr/selectableItemBackground"
+    android:paddingBottom="4dp"
+    android:paddingEnd="16dp"
+    android:paddingStart="16dp"
+    android:paddingTop="4dp"
     >
-  <TextView
-      android:id="@+id/tvName"
+  <android.support.constraint.ConstraintLayout
       android:layout_width="0dp"
       android:layout_height="wrap_content"
-      android:layout_marginTop="8dp"
-      android:fontFamily="@font/circe_regular"
-      android:gravity="center"
-      android:textSize="16sp"
-      android:paddingTop="16dp"
-      android:paddingBottom="16dp"
-      android:background="@color/colorTransparentGray"
+      android:background="@drawable/shape_rounded_corners"
       app:layout_constraintBottom_toBottomOf="parent"
       app:layout_constraintEnd_toEndOf="parent"
       app:layout_constraintStart_toStartOf="parent"
       app:layout_constraintTop_toTopOf="parent"
-      tools:text="@tools:sample/cities"
-      />
+      >
+    <android.support.v7.widget.AppCompatImageView
+        android:id="@+id/ivIcon"
+        android:layout_width="36dp"
+        android:layout_height="36dp"
+        android:layout_marginStart="16dp"
+        android:layout_marginTop="16dp"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        tools:src="@tools:sample/avatars"
+        />
+    <TextView
+        android:id="@+id/tvName"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="16dp"
+        android:fontFamily="@font/century_gothic"
+        android:textColor="@color/colorDarkGray"
+        android:textSize="18sp"
+        app:layout_constraintBottom_toBottomOf="@+id/ivIcon"
+        app:layout_constraintEnd_toStartOf="@id/ivArrow"
+        app:layout_constraintStart_toEndOf="@id/ivIcon"
+        app:layout_constraintTop_toTopOf="@id/ivIcon"
+        tools:text="@tools:sample/cities"
+        />
+    <android.support.v7.widget.AppCompatImageView
+        android:id="@+id/ivArrow"
+        android:layout_width="36dp"
+        android:layout_height="36dp"
+        android:layout_marginEnd="16dp"
+        android:layout_marginTop="16dp"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:srcCompat="@drawable/ic_arrow_collapsed"
+        />
+
+    <View
+        android:id="@+id/dashLine"
+        android:layout_width="0dp"
+        android:layout_height="2dp"
+        android:layout_marginTop="16dp"
+        android:background="@drawable/shape_dash_line"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/ivIcon"
+        />
+    <android.support.constraint.ConstraintLayout
+        android:id="@+id/clInfo"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        android:clickable="true"
+        android:focusable="true"
+        app:layout_constraintBottom_toTopOf="@id/expandable_layout"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/dashLine"
+        >
+      <TextView
+          android:id="@+id/tvAmount"
+          android:layout_width="wrap_content"
+          android:layout_height="wrap_content"
+          android:layout_marginBottom="16dp"
+          android:layout_marginStart="16dp"
+          android:layout_marginTop="16dp"
+          android:fontFamily="@font/circe_bold"
+          android:textColor="@color/colorDarkGray"
+          android:textSize="18sp"
+          android:textStyle="bold"
+          app:layout_constraintBottom_toBottomOf="parent"
+          app:layout_constraintStart_toStartOf="parent"
+          app:layout_constraintTop_toTopOf="parent"
+          tools:text="@tools:sample/cities"
+          />
+      <TextView
+          android:id="@+id/tvAccount"
+          android:layout_width="wrap_content"
+          android:layout_height="wrap_content"
+          android:layout_marginStart="16dp"
+          android:fontFamily="@font/century_gothic"
+          android:textColor="@color/colorGray"
+          android:textSize="18sp"
+          app:layout_constraintBottom_toBottomOf="@id/tvAmount"
+          app:layout_constraintStart_toEndOf="@id/tvAmount"
+          app:layout_constraintTop_toTopOf="@+id/tvAmount"
+          tools:text="@tools:sample/cities"
+          />
+      <android.support.v7.widget.AppCompatImageView
+          android:id="@+id/ivDelete"
+          android:layout_width="30dp"
+          android:layout_height="25dp"
+          android:layout_gravity="center_vertical"
+          android:layout_marginEnd="16dp"
+          app:layout_constraintBottom_toBottomOf="@id/tvAmount"
+          app:layout_constraintEnd_toEndOf="parent"
+          app:layout_constraintTop_toTopOf="@+id/tvAmount"
+          app:srcCompat="@drawable/rubbish_bin"
+          />
+    </android.support.constraint.ConstraintLayout>
+    <net.cachapa.expandablelayout.ExpandableLayout
+        android:id="@+id/expandable_layout"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        app:el_duration="300"
+        app:el_expanded="false"
+        android:clickable="true"
+        android:focusable="true"
+        android:focusableInTouchMode="true"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/clInfo"
+        >
+
+      <android.support.constraint.ConstraintLayout
+          android:id="@+id/clDialog"
+          android:layout_width="match_parent"
+          android:layout_height="wrap_content"
+          android:background="@drawable/shape_rounded_corners"
+          >
+
+        <EditText
+            android:id="@+id/etAccount"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_marginEnd="16dp"
+            android:layout_marginStart="16dp"
+            android:layout_marginTop="16dp"
+            android:background="@drawable/selector_et_bg"
+            android:fontFamily="@font/circe_regular"
+            android:hint="@string/payment_account_hint"
+            android:imeOptions="actionNext"
+            android:inputType="number"
+            android:nextFocusDown="@id/etAmount"
+            android:padding="8dp"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent"
+            />
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="4dp"
+            android:alpha=".6"
+            android:fontFamily="@font/circe_bold"
+            android:text="@string/payment_account_title"
+            android:textAllCaps="true"
+            android:textColor="@color/colorGray"
+            android:textSize="12sp"
+            app:layout_constraintStart_toStartOf="@id/etAccount"
+            app:layout_constraintTop_toBottomOf="@id/etAccount"
+            />
+        <EditText
+            android:id="@+id/etAmount"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_marginEnd="16dp"
+            android:layout_marginStart="16dp"
+            android:layout_marginTop="32dp"
+            android:background="@drawable/selector_et_bg"
+            android:fontFamily="@font/circe_regular"
+            android:hint="@string/payment_amount_hint"
+            android:imeOptions="actionDone"
+            android:inputType="number"
+            android:padding="8dp"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/etAccount"
+            />
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="4dp"
+            android:alpha=".6"
+            android:fontFamily="@font/circe_bold"
+            android:text="@string/payment_amount_title"
+            android:textAllCaps="true"
+            android:textColor="@color/colorGray"
+            android:textSize="12sp"
+            app:layout_constraintStart_toStartOf="@id/etAmount"
+            app:layout_constraintTop_toBottomOf="@id/etAmount"
+            />
+        <android.support.v7.widget.AppCompatButton
+            android:id="@+id/btnDelete"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="32dp"
+            android:background="@drawable/shape_rounded_corner_bot"
+            android:fontFamily="@font/circe_regular"
+            android:text="@string/templates_delete"
+            android:textAllCaps="false"
+            android:textColor="@color/colorDarkGray"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toStartOf="@id/btnSave"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/etAmount"
+            />
+        <android.support.v7.widget.AppCompatButton
+            android:id="@+id/btnSave"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="32dp"
+            android:background="@drawable/shape_green_gradient_rounded"
+            android:fontFamily="@font/circe_bold"
+            android:text="@string/templates_save"
+            android:textAllCaps="false"
+            android:textColor="@color/colorAlmostWhite"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toEndOf="@id/btnDelete"
+            app:layout_constraintTop_toBottomOf="@+id/etAmount"
+            />
+        <View
+            android:layout_width="0dp"
+            android:layout_height="1dp"
+            android:alpha=".5"
+            android:background="@color/colorTransparentGray"
+            app:layout_constraintBottom_toTopOf="@+id/btnDelete"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            />
+      </android.support.constraint.ConstraintLayout>
+
+    </net.cachapa.expandablelayout.ExpandableLayout>
+  </android.support.constraint.ConstraintLayout>
+
 </android.support.constraint.ConstraintLayout>
