--- a/app/src/main/res-screen/main/layout/item_service_child.xml
+++ b/app/src/main/res-screen/main/layout/item_service_child.xml
@@ -65,6 +65,8 @@
         android:layout_height="wrap_content"
         app:el_duration="300"
         app:el_expanded="false"
+        android:clickable="true"
+        android:focusable="true"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
