--- a/app/src/main/res/menu/bottombar_tabs.xml
+++ b/app/src/main/res/menu/bottombar_tabs.xml
@@ -18,7 +18,7 @@
       app:showAsAction="always|withText"/>
   <item
       android:id="@+id/tab_map"
-      android:icon="@drawable/menu_settings"
+      android:icon="@drawable/menu_map"
       android:title="@string/tab_map"
       app:showAsAction="always|withText"/>
 </menu>
