added btn pay all

--- a/app/src/main/res-screen/main/layout/item_template.xml
+++ b/app/src/main/res-screen/main/layout/item_template.xml
@@ -211,6 +211,7 @@
             android:fontFamily="@font/circe_regular"
             android:text="@string/templates_delete"
             android:textAllCaps="false"
+            android:textSize="18sp"
             android:textColor="@color/colorDarkGray"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toStartOf="@id/btnSave"
@@ -222,10 +223,11 @@
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_marginTop="32dp"
-            android:background="@drawable/shape_green_gradient_rounded"
+            android:background="@drawable/shape_green_gradient_rounded_right_bot"
             android:fontFamily="@font/circe_bold"
             android:text="@string/templates_save"
             android:textAllCaps="false"
+            android:textSize="18sp"
             android:textColor="@color/colorAlmostWhite"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
