--- a/app/src/main/res-screen/main/layout/fragment_templates.xml
+++ b/app/src/main/res-screen/main/layout/fragment_templates.xml
@@ -11,11 +11,11 @@
     >
   <LinearLayout
       android:id="@+id/llTitle"
-      android:orientation="vertical"
       android:layout_width="0dp"
       android:layout_height="wrap_content"
-      android:gravity="center_horizontal"
       android:background="@drawable/shape_gradient_accent"
+      android:gravity="center_horizontal"
+      android:orientation="vertical"
       app:layout_constraintEnd_toEndOf="parent"
       app:layout_constraintStart_toStartOf="parent"
       app:layout_constraintTop_toTopOf="parent"
@@ -49,10 +49,45 @@
       android:id="@+id/rvTemplates"
       android:layout_width="0dp"
       android:layout_height="0dp"
-      app:layout_constraintBottom_toBottomOf="parent"
+      android:layout_marginBottom="8dp"
+      app:layout_constraintBottom_toTopOf="@+id/btnPayAll"
       app:layout_constraintEnd_toEndOf="parent"
       app:layout_constraintStart_toStartOf="parent"
       app:layout_constraintTop_toBottomOf="@+id/llTitle"
       tools:listitem="@layout/item_service_parent"
       />
+  <LinearLayout
+      android:id="@+id/btnPayAll"
+      android:layout_width="0dp"
+      android:layout_height="wrap_content"
+      android:layout_marginBottom="8dp"
+      android:layout_marginEnd="16dp"
+      android:layout_marginStart="16dp"
+      android:foreground="?attr/selectableItemBackground"
+      android:background="@drawable/shape_green_gradient_rounded"
+      android:gravity="center"
+      android:orientation="horizontal"
+      app:layout_constraintBottom_toBottomOf="parent"
+      app:layout_constraintEnd_toEndOf="parent"
+      app:layout_constraintStart_toStartOf="parent"
+      >
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:fontFamily="@font/circe_bold"
+        android:paddingBottom="12dp"
+        android:paddingTop="12dp"
+        android:text="@string/templates_pay_all"
+        android:textAllCaps="false"
+        android:textColor="@color/colorAlmostWhite"
+        android:textSize="18sp"
+        android:textStyle="bold"
+        />
+    <ImageView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="16dp"
+        android:src="@drawable/barcode_white"
+        />
+  </LinearLayout>
 </android.support.constraint.ConstraintLayout>
