--- a/app/src/main/res/drawable/shape_green_gradient_rounded_right_bot.xml
+++ b/app/src/main/res/drawable/shape_green_gradient_rounded_right_bot.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <shape xmlns:android="http://schemas.android.com/apk/res/android"
     android:shape="rectangle">
-  <corners android:radius="5dp"/>
+  <corners android:bottomRightRadius="5dp"/>
   <gradient
       android:startColor="#afe74f"
       android:centerColor="#7cc03b"
