--- a/app/src/main/res-screen/main/layout/fragment_templates.xml
+++ b/app/src/main/res-screen/main/layout/fragment_templates.xml
@@ -84,8 +84,8 @@
         android:textStyle="bold"
         />
     <ImageView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_width="40dp"
+        android:layout_height="25dp"
         android:layout_marginStart="16dp"
         android:src="@drawable/barcode_white"
         />
