--- a/app/src/main/res-screen/main/layout/fragment_catalog_child.xml
+++ b/app/src/main/res-screen/main/layout/fragment_catalog_child.xml
@@ -58,49 +58,42 @@
         tools:text="@tools:sample/cities"
         />
   </android.support.constraint.ConstraintLayout>
-  <android.support.v4.widget.NestedScrollView
-      android:layout_width="0dp"
-      android:layout_height="0dp"
-      app:layout_constraintBottom_toBottomOf="parent"
+  <android.support.v7.widget.AppCompatEditText
+      android:id="@+id/etSearch"
+      android:layout_width="match_parent"
+      android:layout_height="40dp"
+      android:layout_marginBottom="4dp"
+      android:layout_marginLeft="16dp"
+      android:layout_marginRight="16dp"
+      android:layout_marginTop="16dp"
+      android:background="@drawable/shape_background_search"
+      android:drawablePadding="8dp"
+      android:drawableStart="@drawable/ic_search_white_24dp"
+      android:fontFamily="@font/century_gothic"
+      android:hint="@string/catalog_search"
+      android:imeOptions="actionDone"
+      android:inputType="text"
+      android:paddingRight="30dp"
+      android:paddingStart="8dp"
+      android:textColorHint="@color/colorDarkGray"
+      android:textSize="16sp"
+      android:visibility="visible"
       app:layout_constraintEnd_toEndOf="parent"
       app:layout_constraintStart_toStartOf="parent"
       app:layout_constraintTop_toBottomOf="@+id/clTitle"
-      >
-    <RelativeLayout
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        >
-      <android.support.v7.widget.AppCompatEditText
-          android:id="@+id/etSearch"
-          android:layout_width="match_parent"
-          android:layout_height="40dp"
-          android:layout_marginBottom="4dp"
-          android:layout_marginLeft="16dp"
-          android:layout_marginRight="16dp"
-          android:layout_marginTop="16dp"
-          android:background="@drawable/shape_background_search"
-          android:drawableStart="@drawable/ic_search_white_24dp"
-          android:fontFamily="@font/century_gothic"
-          android:hint="@string/catalog_search"
-          android:imeOptions="actionDone"
-          android:inputType="text"
-          android:paddingRight="30dp"
-          android:paddingStart="8dp"
-          android:drawablePadding="8dp"
-          android:textColorHint="@color/colorDarkGray"
-          android:textSize="16sp"
-          android:visibility="visible"
-          />
-      <android.support.v7.widget.RecyclerView
-          android:id="@+id/rvCatalogChild"
-          android:layout_width="match_parent"
-          android:layout_height="match_parent"
-          android:layout_below="@+id/etSearch"
-          android:layout_marginTop="12dp"
-          tools:listitem="@layout/item_service_child"
-          />
-    </RelativeLayout>
-  </android.support.v4.widget.NestedScrollView>
+      />
+  <android.support.v7.widget.RecyclerView
+      android:id="@+id/rvCatalogChild"
+      android:layout_width="match_parent"
+      android:layout_height="0dp"
+      android:layout_below="@+id/etSearch"
+      android:layout_marginTop="12dp"
+      app:layout_constraintBottom_toBottomOf="parent"
+      app:layout_constraintEnd_toEndOf="parent"
+      app:layout_constraintStart_toStartOf="parent"
+      app:layout_constraintTop_toBottomOf="@+id/etSearch"
+      tools:listitem="@layout/item_service_child"
+      />
   <ProgressBar
       android:id="@+id/pbProgress"
       android:layout_width="wrap_content"
