--- a/app/src/main/res-screen/main/layout/fragment_payment.xml
+++ b/app/src/main/res-screen/main/layout/fragment_payment.xml
@@ -12,13 +12,13 @@
   <android.support.constraint.ConstraintLayout
       android:id="@+id/clTicket"
       android:layout_width="0dp"
-      android:layout_height="wrap_content"
+      android:layout_height="300dp"
       android:layout_marginEnd="8dp"
       android:layout_marginStart="8dp"
-      android:layout_marginTop="53dp"
+      android:layout_marginTop="50dp"
       app:layout_constraintEnd_toEndOf="parent"
       app:layout_constraintStart_toStartOf="parent"
-      app:layout_constraintTop_toTopOf="@+id/llCreate"
+      app:layout_constraintTop_toTopOf="parent"
       >
     <com.vipulasri.ticketview.TicketView
         android:id="@+id/ticketView"
@@ -70,7 +70,7 @@
         android:id="@+id/tvCode"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="24dp"
+        android:layout_marginTop="16dp"
         android:fontFamily="@font/circe_regular"
         android:text="@string/payment_code"
         android:textAllCaps="true"
@@ -86,7 +86,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="4dp"
-        android:layout_marginTop="24dp"
+        android:layout_marginTop="16dp"
         android:fontFamily="@font/circe_regular"
         android:textAllCaps="true"
         android:textColor="@color/colorDarkGray"
@@ -121,155 +121,51 @@
         app:layout_constraintTop_toBottomOf="@id/tvDate"
         />
   </android.support.constraint.ConstraintLayout>
-  <LinearLayout
-      android:id="@+id/llCreate"
+  <android.support.constraint.ConstraintLayout
+      android:id="@+id/clTitle"
       android:layout_width="0dp"
       android:layout_height="56dp"
-      android:background="@drawable/shape_button_bg_white"
-      android:foreground="?attr/selectableItemBackground"
-      android:gravity="center"
-      android:orientation="horizontal"
-      app:layout_constraintEnd_toStartOf="@id/llTemplates"
-      app:layout_constraintStart_toStartOf="parent"
-      app:layout_constraintTop_toTopOf="parent"
-      >
-    <ImageView
-        android:layout_width="38dp"
-        android:layout_height="24dp"
-        android:src="@drawable/barcode"
-        />
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="8dp"
-        android:fontFamily="@font/circe_regular"
-        android:text="@string/payment_create"
-        android:textColor="@color/colorDarkGray"
-        android:textSize="18sp"
-        />
-  </LinearLayout>
-  <LinearLayout
-      android:id="@+id/llTemplates"
-      android:layout_width="0dp"
-      android:layout_height="56dp"
-      android:background="@drawable/shape_button_bg_accent"
-      android:foreground="?attr/selectableItemBackground"
-      android:gravity="center"
-      android:orientation="horizontal"
+      android:background="@drawable/shape_green_gradient"
       app:layout_constraintEnd_toEndOf="parent"
-      app:layout_constraintStart_toEndOf="@id/llCreate"
-      app:layout_constraintTop_toTopOf="parent"
+      app:layout_constraintStart_toStartOf="parent"
       >
-    <ImageView
-        android:layout_width="38dp"
-        android:layout_height="24dp"
-        android:src="@drawable/template"
-        />
-    <TextView
+    <android.support.v7.widget.AppCompatImageView
+        android:id="@+id/ivBack"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="8dp"
-        android:fontFamily="@font/circe_regular"
-        android:text="@string/payment_templates"
+        android:layout_marginBottom="16dp"
+        android:layout_marginStart="16dp"
+        android:layout_marginTop="16dp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:srcCompat="@drawable/ic_back_white_34dp"
+        />
+    <TextView
+        android:id="@+id/tvTitle"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="16dp"
+        android:fontFamily="@font/century_gothic"
+        android:text="@string/payment_title"
         android:textColor="@color/colorAlmostWhite"
         android:textSize="18sp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintStart_toEndOf="@+id/ivBack"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_chainStyle="packed"
         />
-  </LinearLayout>
-
-  <android.support.v7.widget.CardView
-      android:id="@+id/cvService"
+  </android.support.constraint.ConstraintLayout>
+  <android.support.v7.widget.RecyclerView
+      android:id="@+id/rvPayments"
       android:layout_width="0dp"
-      android:layout_height="60dp"
-      android:layout_marginEnd="14dp"
-      android:layout_marginStart="14dp"
+      android:layout_height="wrap_content"
       android:layout_marginTop="16dp"
       app:elevation="16dp"
       app:layout_constraintEnd_toEndOf="parent"
       app:layout_constraintStart_toStartOf="parent"
       app:layout_constraintTop_toBottomOf="@id/clTicket"
-      >
-    <android.support.constraint.ConstraintLayout
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:background="@color/colorLightBlue"
-        >
-      <ImageView
-          android:id="@+id/ivServiceIcon"
-          android:layout_width="36dp"
-          android:layout_height="36dp"
-          android:layout_marginStart="8dp"
-          app:layout_constraintBottom_toBottomOf="parent"
-          app:layout_constraintStart_toStartOf="parent"
-          app:layout_constraintTop_toTopOf="parent"
-          />
-      <TextView
-          android:id="@+id/tvServiceName"
-          android:layout_width="wrap_content"
-          android:layout_height="wrap_content"
-          android:layout_marginStart="8dp"
-          android:fontFamily="@font/circe_bold"
-          android:textColor="@color/colorGray"
-          app:layout_constraintBottom_toTopOf="@id/tvAccount"
-          app:layout_constraintStart_toEndOf="@+id/ivServiceIcon"
-          app:layout_constraintTop_toTopOf="parent"
-          app:layout_constraintVertical_chainStyle="packed"
-          tools:text="Popolnenie mobilnogo"
-          />
-      <TextView
-          android:id="@+id/tvAccount"
-          android:layout_width="wrap_content"
-          android:layout_height="wrap_content"
-          android:layout_marginStart="8dp"
-          android:fontFamily="@font/century_gothic"
-          android:textColor="@color/colorAlmostBlack"
-          android:textSize="16sp"
-          app:layout_constraintBottom_toBottomOf="parent"
-          app:layout_constraintStart_toEndOf="@+id/ivServiceIcon"
-          app:layout_constraintTop_toBottomOf="@id/tvServiceName"
-          tools:text="+380 95 422 69 77"
-          />
-      <LinearLayout
-          android:layout_width="wrap_content"
-          android:layout_height="0dp"
-          android:background="@drawable/shape_rounded_side"
-          android:gravity="center_vertical"
-          android:orientation="vertical"
-          android:paddingStart="8dp"
-          app:layout_constraintBottom_toBottomOf="parent"
-          app:layout_constraintEnd_toEndOf="parent"
-          app:layout_constraintTop_toTopOf="parent"
-          >
-        <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginEnd="24dp"
-            android:layout_marginStart="8dp"
-            android:fontFamily="@font/century_gothic"
-            android:text="@string/payment_amount"
-            android:textAllCaps="true"
-            android:textColor="@color/colorAlmostBlack"
-            android:textSize="16sp"
-            app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintStart_toEndOf="@+id/ivServiceIcon"
-            app:layout_constraintTop_toBottomOf="@id/tvServiceName"
-            />
-        <TextView
-            android:id="@+id/tvSum"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginEnd="2dp"
-            android:layout_marginStart="8dp"
-            android:fontFamily="@font/century_gothic"
-            android:textColor="@color/colorAlmostBlack"
-            android:textSize="16sp"
-            app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintStart_toEndOf="@+id/ivServiceIcon"
-            app:layout_constraintTop_toBottomOf="@id/tvServiceName"
-            tools:text="80 hrn"
-            />
-      </LinearLayout>
-    </android.support.constraint.ConstraintLayout>
-  </android.support.v7.widget.CardView>
+      />
   <View
       android:layout_width="0dp"
       android:layout_height="1dp"
@@ -277,7 +173,7 @@
       android:background="@color/colorTransparentWhite"
       app:layout_constraintEnd_toEndOf="parent"
       app:layout_constraintStart_toStartOf="parent"
-      app:layout_constraintTop_toBottomOf="@id/cvService"
+      app:layout_constraintTop_toBottomOf="@id/rvPayments"
       />
   <TextView
       android:layout_width="wrap_content"
@@ -289,7 +185,7 @@
       android:textColor="@color/colorDarkGray"
       android:textSize="20sp"
       app:layout_constraintStart_toStartOf="parent"
-      app:layout_constraintTop_toBottomOf="@id/cvService"
+      app:layout_constraintTop_toBottomOf="@id/rvPayments"
       />
   <TextView
       android:id="@+id/tvAmount"
@@ -301,34 +197,7 @@
       android:textColor="@color/colorDarkGray"
       android:textSize="20sp"
       app:layout_constraintEnd_toEndOf="parent"
-      app:layout_constraintTop_toBottomOf="@id/cvService"
+      app:layout_constraintTop_toBottomOf="@id/rvPayments"
       tools:text="80.5 hrn"
       />
-  <LinearLayout
-      android:id="@+id/llDelete"
-      android:layout_width="wrap_content"
-      android:layout_height="wrap_content"
-      android:foreground="?attr/selectableItemBackground"
-      android:orientation="horizontal"
-      android:padding="8dp"
-      app:layout_constraintEnd_toEndOf="@+id/tvAmount"
-      app:layout_constraintStart_toStartOf="@+id/tvAmount"
-      app:layout_constraintTop_toBottomOf="@+id/tvAmount"
-      >
-    <android.support.v7.widget.AppCompatImageView
-        android:id="@+id/ivDelete"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_gravity="center_vertical"
-        app:srcCompat="@drawable/rubbish_bin"
-        />
-    <TextView
-        android:id="@+id/tvDelete"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="8dp"
-        android:text="@string/templates_delete"
-        android:textColor="@color/colorAccent"
-        />
-  </LinearLayout>
 </android.support.constraint.ConstraintLayout>
