--- a/app/src/main/res-screen/main/layout/item_service_child.xml
+++ b/app/src/main/res-screen/main/layout/item_service_child.xml
@@ -63,10 +63,10 @@
         android:id="@+id/expandable_layout"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
-        app:el_duration="300"
-        app:el_expanded="false"
         android:clickable="true"
         android:focusable="true"
+        app:el_duration="300"
+        app:el_expanded="false"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -101,6 +101,7 @@
             android:hint="@string/payment_account_hint"
             android:imeOptions="actionNext"
             android:inputType="number"
+            android:maxLength="12"
             android:nextFocusDown="@id/etAmount"
             android:padding="8dp"
             app:layout_constraintEnd_toEndOf="parent"
@@ -108,6 +109,7 @@
             app:layout_constraintTop_toBottomOf="@+id/dashLine"
             />
         <TextView
+            android:id="@+id/tvAccountHint"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginTop="4dp"
@@ -132,6 +134,7 @@
             android:hint="@string/payment_amount_hint"
             android:imeOptions="actionDone"
             android:inputType="number"
+            android:maxLength="4"
             android:padding="8dp"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
@@ -151,33 +154,33 @@
             app:layout_constraintTop_toBottomOf="@id/etAmount"
             />
         <android.support.v7.widget.AppCompatButton
-            android:id="@+id/btnCreateTemplate"
-            android:layout_width="0dp"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="32dp"
-            android:background="@drawable/shape_rounded_corner_bot"
-            android:fontFamily="@font/circe_regular"
-            android:text="@string/payment_create"
-            android:textAllCaps="false"
-            android:textColor="@color/colorDarkGray"
-            app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintEnd_toStartOf="@id/btnGoToPayment"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/etAmount"
-            />
-        <android.support.v7.widget.AppCompatButton
             android:id="@+id/btnGoToPayment"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_marginTop="32dp"
-            android:background="@drawable/shape_green_gradient_rounded_right_bot"
+            android:background="@drawable/shape_rounded_corner_bot"
             android:fontFamily="@font/circe_bold"
             android:text="@string/payment_go_to_payment"
+            android:textAllCaps="false"
+            android:textColor="@color/colorDarkGray"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toStartOf="@id/btnCreateTemplate"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/etAmount"
+            />
+        <android.support.v7.widget.AppCompatButton
+            android:id="@+id/btnCreateTemplate"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="32dp"
+            android:background="@drawable/shape_green_gradient_rounded_right_bot"
+            android:fontFamily="@font/circe_regular"
+            android:text="@string/payment_create"
             android:textAllCaps="false"
             android:textColor="@color/colorAlmostWhite"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toEndOf="@id/btnCreateTemplate"
+            app:layout_constraintStart_toEndOf="@id/btnGoToPayment"
             app:layout_constraintTop_toBottomOf="@+id/etAmount"
             />
         <View
