--- a/app/src/main/res-screen/main/layout/fragment_payment.xml
+++ b/app/src/main/res-screen/main/layout/fragment_payment.xml
@@ -156,48 +156,61 @@
         app:layout_constraintVertical_chainStyle="packed"
         />
   </android.support.constraint.ConstraintLayout>
-  <android.support.v7.widget.RecyclerView
-      android:id="@+id/rvPayments"
+  <android.support.v4.widget.NestedScrollView
       android:layout_width="0dp"
       android:layout_height="wrap_content"
-      android:layout_marginTop="16dp"
-      app:elevation="16dp"
       app:layout_constraintEnd_toEndOf="parent"
       app:layout_constraintStart_toStartOf="parent"
       app:layout_constraintTop_toBottomOf="@id/clTicket"
-      />
-  <View
-      android:layout_width="0dp"
-      android:layout_height="1dp"
-      android:layout_marginTop="12dp"
-      android:background="@color/colorTransparentWhite"
-      app:layout_constraintEnd_toEndOf="parent"
-      app:layout_constraintStart_toStartOf="parent"
-      app:layout_constraintTop_toBottomOf="@id/rvPayments"
-      />
-  <TextView
-      android:layout_width="wrap_content"
-      android:layout_height="wrap_content"
-      android:layout_marginStart="16dp"
-      android:layout_marginTop="24dp"
-      android:fontFamily="@font/circe_regular"
-      android:text="@string/payment_to_pay"
-      android:textColor="@color/colorDarkGray"
-      android:textSize="20sp"
-      app:layout_constraintStart_toStartOf="parent"
-      app:layout_constraintTop_toBottomOf="@id/rvPayments"
-      />
-  <TextView
-      android:id="@+id/tvAmount"
-      android:layout_width="wrap_content"
-      android:layout_height="wrap_content"
-      android:layout_marginEnd="16dp"
-      android:layout_marginTop="24dp"
-      android:fontFamily="@font/circe_regular"
-      android:textColor="@color/colorDarkGray"
-      android:textSize="20sp"
-      app:layout_constraintEnd_toEndOf="parent"
-      app:layout_constraintTop_toBottomOf="@id/rvPayments"
-      tools:text="80.5 hrn"
-      />
+      >
+    <android.support.constraint.ConstraintLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        >
+      <android.support.v7.widget.RecyclerView
+          android:id="@+id/rvPayments"
+          android:layout_width="0dp"
+          android:layout_height="wrap_content"
+          android:layout_marginTop="16dp"
+          app:elevation="16dp"
+          app:layout_constraintEnd_toEndOf="parent"
+          app:layout_constraintStart_toStartOf="parent"
+          app:layout_constraintTop_toTopOf="parent"
+          />
+      <View
+          android:layout_width="0dp"
+          android:layout_height="1dp"
+          android:layout_marginTop="12dp"
+          android:background="@color/colorTransparentWhite"
+          app:layout_constraintEnd_toEndOf="parent"
+          app:layout_constraintStart_toStartOf="parent"
+          app:layout_constraintTop_toBottomOf="@id/rvPayments"
+          />
+      <TextView
+          android:layout_width="wrap_content"
+          android:layout_height="wrap_content"
+          android:layout_marginStart="16dp"
+          android:layout_marginTop="24dp"
+          android:fontFamily="@font/circe_regular"
+          android:text="@string/payment_to_pay"
+          android:textColor="@color/colorDarkGray"
+          android:textSize="20sp"
+          app:layout_constraintStart_toStartOf="parent"
+          app:layout_constraintTop_toBottomOf="@id/rvPayments"
+          />
+      <TextView
+          android:id="@+id/tvAmount"
+          android:layout_width="wrap_content"
+          android:layout_height="wrap_content"
+          android:layout_marginEnd="16dp"
+          android:layout_marginTop="24dp"
+          android:fontFamily="@font/circe_regular"
+          android:textColor="@color/colorDarkGray"
+          android:textSize="20sp"
+          app:layout_constraintEnd_toEndOf="parent"
+          app:layout_constraintTop_toBottomOf="@id/rvPayments"
+          tools:text="80.5 hrn"
+          />
+    </android.support.constraint.ConstraintLayout>
+  </android.support.v4.widget.NestedScrollView>
 </android.support.constraint.ConstraintLayout>
