--- a/app/src/main/res-screen/main/layout/item_template.xml
+++ b/app/src/main/res-screen/main/layout/item_template.xml
@@ -111,8 +111,8 @@
           android:layout_width="60dp"
           android:layout_height="50dp"
           android:layout_gravity="center_vertical"
-          android:padding="12dp"
           android:foreground="?attr/selectableItemBackgroundBorderless"
+          android:padding="12dp"
           app:layout_constraintBottom_toBottomOf="@id/tvAmount"
           app:layout_constraintEnd_toEndOf="parent"
           app:layout_constraintTop_toTopOf="@+id/tvAmount"
@@ -123,11 +123,11 @@
         android:id="@+id/expandable_layout"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
-        app:el_duration="300"
-        app:el_expanded="false"
         android:clickable="true"
         android:focusable="true"
         android:focusableInTouchMode="true"
+        app:el_duration="300"
+        app:el_expanded="false"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -153,6 +153,7 @@
             android:hint="@string/payment_account_hint"
             android:imeOptions="actionNext"
             android:inputType="number"
+            android:maxLength="12"
             android:nextFocusDown="@id/etAmount"
             android:padding="8dp"
             app:layout_constraintEnd_toEndOf="parent"
@@ -184,6 +185,7 @@
             android:hint="@string/payment_amount_hint"
             android:imeOptions="actionDone"
             android:inputType="number"
+            android:maxLength="4"
             android:padding="8dp"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
@@ -211,8 +213,8 @@
             android:fontFamily="@font/circe_regular"
             android:text="@string/templates_delete"
             android:textAllCaps="false"
-            android:textSize="18sp"
             android:textColor="@color/colorDarkGray"
+            android:textSize="18sp"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toStartOf="@id/btnSave"
             app:layout_constraintStart_toStartOf="parent"
@@ -227,8 +229,8 @@
             android:fontFamily="@font/circe_bold"
             android:text="@string/templates_save"
             android:textAllCaps="false"
-            android:textSize="18sp"
             android:textColor="@color/colorAlmostWhite"
+            android:textSize="18sp"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toEndOf="@id/btnDelete"
