--- a/app/src/main/res-screen/main/layout/fragment_payment.xml
+++ b/app/src/main/res-screen/main/layout/fragment_payment.xml
@@ -158,14 +158,16 @@
   </android.support.constraint.ConstraintLayout>
   <android.support.v4.widget.NestedScrollView
       android:layout_width="0dp"
-      android:layout_height="wrap_content"
+      android:layout_height="0dp"
       app:layout_constraintEnd_toEndOf="parent"
       app:layout_constraintStart_toStartOf="parent"
       app:layout_constraintTop_toBottomOf="@id/clTicket"
+      app:layout_constraintBottom_toBottomOf="parent"
       >
     <android.support.constraint.ConstraintLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:paddingBottom="16dp"
         >
       <android.support.v7.widget.RecyclerView
           android:id="@+id/rvPayments"
